package practice.after2;

// 출력, 표시 추상 클래스
public abstract class Display {

    public abstract void draw();

}
