package practice.after2;

// 차선 표시를 추가하는 클래스 : 다양한 추가 기능에 대한 공통 클래스 상속
public class LaneDecorator extends DisplayDecorator {

    // 생성자
    public LaneDecorator(Display decoratedDisplay) {
        super(decoratedDisplay);
    }

    // 출력 메서드 오버라이드
    @Override
    public void draw() {
        super.draw();
        drawLane();
    }

    // 차선 표시 메서드
    private void drawLane() {
        System.out.println("\t차선 표시");
    }

}
