package practice.after2;

// 기본 도로 표시 클래스 : 출력 클래스 상속
public class RoadDisplay extends Display {

    @Override
    public void draw() {
        System.out.println("기본도로 표시");
    }

}
